# atcoder-environment

./: .gitignore  Cargo.toml  README.md  compete-new.sh  pyproject.toml
mylib/src/: grid.rs  lib.rs  multiset.rs
snippets/: rust.json
snippets/stress/: README.md  stress.py
src/abc042/: Cargo.toml
src/abc042/testcases/: a.yml  b.yml  c.yml  d.yml
src/abc081/: Cargo.toml
src/abc081/testcases/: a.yml  b.yml  c.yml  d.yml
src/abc083/: Cargo.toml
src/abc083/testcases/: a.yml  b.yml  c.yml  d.yml
src/abc084/: Cargo.toml
src/abc084/testcases/: a.yml  b.yml  c.yml  d.yml
src/abc121/: Cargo.toml
src/abc121/testcases/: a.yml  b.yml  c.yml  d.yml
src/abc136/: Cargo.toml
src/abc136/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
src/abc138/: Cargo.toml
src/abc138/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
src/abc148/: Cargo.toml
src/abc148/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
src/abc153/: Cargo.toml
src/abc176/: Cargo.toml
src/abc229/: Cargo.toml
src/abc297/: Cargo.toml
src/abc315/: Cargo.toml
src/abc331/: Cargo.toml
src/abc349/: Cargo.toml
src/abc360/: Cargo.toml
src/abc364/: Cargo.toml
src/abc397/: Cargo.toml
src/abc398/: Cargo.toml
src/abc398/stress/: README.md  gen_c.py  ng_c.txt
src/abc431/: Cargo.toml
src/abc455/: Cargo.toml
src/abc459/: Cargo.toml
src/abc459/testcases/: a.yml  b.yml  c.yml  d.yml  (+3 more)
src/abc461/: Cargo.toml
src/abc462/: Cargo.toml
src/abc463/: Cargo.toml
src/agc026/: Cargo.toml
src/awc0073/: Cargo.toml
src/awc0074/: Cargo.toml
src/typical90/: Cargo.toml
(+38 files in other folders)
