[workspace]
members = [
    "src/abc457",
    "src/abc458",
    "src/abc455",
    "mylib",
    "src/awc0073",
    "src/awc0074",
    "src/abc459",
    "src/abc036",
    "src/tessoku-book",
    "src/practice2",
    "src/past202109-open",
    "src/abc185",
    "src/abc460",
    "src/abc431",
    "src/abc153",
    "src/abc121",
    "src/abc176",
    "src/abc083",
    "src/abc148",
    "src/abc297",
    "src/abc397",
    "src/abc331",
    "src/abc364",
    "src/typical90",
    "src/abc360",
    "src/abc349",
    "src/abc461",
    "src/abc315",
    "src/abc229",
    "src/abc138",
    "src/abc136",
    "src/abc084",
    "src/abc081",
    "src/abc042",
]
resolver = "2"
